# split-object

./: CMakeLists.txt  README.md
include/: SplitFood.hpp  SplitObject.hpp  SplitObjectCreator.hpp  Stats2D.hpp  convexity.hpp  cvutils.hpp
include/Shape/: CNEllipseDetector.h  CNEllipseDetectorUtils.h
python/: README.md  main.py  requirements.txt  test.py
python/utils/: clustering_area.py  contour.py  convexity.py  filters.py  find_endpoints.py  normalization.py  region_merging.py  visualization.py
samples/: CMakeLists.txt  InputDataLoad.cpp  InputDataLoad.hpp  main.cpp
samples/data/: target_sample.txt
src/: CMakeLists.txt  SplitObject.cpp
src/Shape/: CMakeLists.txt  CNEllipseDetector.cpp  CNEllipseDetectorUtils.cpp
